feat: swipe carousel works too

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,11 +80,11 @@
     }
   }
 
-  .animate-scroll-left {
+  /* .animate-scroll-left {
     animation: scroll-left 120s linear infinite;
   }
 
   .animate-scroll-right {
     animation: scroll-right 120s linear infinite;
-  }
+  } */
 }
